[package]
name = "bruto"
version = "0.1.0"
description = "Artificial opponent to play the board game Quarto"
keywords = ["game", "quarto"]
edition = "2021"
authors = ["Mate Kovacs"]
license = "MIT"
repository = "https://github.com/mkovaxx/bruto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
